--- a/src/app/pages/client/product/list-product/list-product.component.html
+++ b/src/app/pages/client/product/list-product/list-product.component.html
@@ -108,7 +108,7 @@
 
               <div class="flex items-center justify-between">
                 <span class="font-light dark:text-white"
-                  >{{ item.price }} <span class="underline">đ</span>
+                  >{{ formatMoney(item.price) }}
                 </span>
                 <div>
                   <div class="flex items-center mt-2.5 mb-5">
