--- a/src/app/pages/admin/product-admin/product-admin.component.html
+++ b/src/app/pages/admin/product-admin/product-admin.component.html
@@ -8,7 +8,7 @@
         Thêm sản phẩm
       </button>
     </a>
-    <a routerLink="/admin/category/add">
+    <a routerLink="/admin/category">
       <button
         class="py-2 px-3 @apply bg-[linear-gradient(116deg,#cb5714_0%,#ecab0d_100%)] hover:bg-[linear-gradient(204deg,#b54606_0%,#eab024_100%)] text-white rounded-md hover:bg-blue-500 ml-3"
         style="transition: all 0.4s"
