--- a/src/app/pages/client/product/details-product/details-product.component.html
+++ b/src/app/pages/client/product/details-product/details-product.component.html
@@ -272,7 +272,7 @@
             />
           </a>
           <div class="pb-5 my-2">
-            <a href="/product/{{ item._id }}">
+            <a routerLink="/product/{{ item._id }}">
               <h5
                 class="tracking-tight dark:text-white line-clamp-1 hover:text-[#618C2F] uppercase"
               >
