--- a/src/app/pages/admin/user-admin/user-admin.component.html
+++ b/src/app/pages/admin/user-admin/user-admin.component.html
@@ -1,3 +1,65 @@
+<section
+  [ngClass]="
+    notificationPro == 1
+      ? 'fixed left-1/2 top-[50px]'
+      : 'fixed left-1/2 top-[-50px]'
+  "
+  style="transform: translate(-50%, -50%); transition: all 0.35s"
+>
+  <div
+    class="flex p-4 mb-4 text-sm text-green-800 rounded-lg bg-green-50 dark:bg-gray-800 dark:text-green-400"
+    role="alert"
+  >
+    <svg
+      aria-hidden="true"
+      class="flex-shrink-0 inline w-5 h-5 mr-3"
+      fill="currentColor"
+      viewBox="0 0 20 20"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        fill-rule="evenodd"
+        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
+        clip-rule="evenodd"
+      ></path>
+    </svg>
+    <span class="sr-only">Info</span>
+    <div>
+      <span class="font-medium">Vô hiệu người dùng thành công!</span>
+    </div>
+  </div>
+</section>
+<section
+  [ngClass]="
+    notificationPro == 2
+      ? 'fixed left-1/2 top-[50px]'
+      : 'fixed left-1/2 top-[-50px]'
+  "
+  style="transform: translate(-50%, -50%); transition: all 0.35s"
+>
+  <div
+    class="flex p-4 mb-4 text-sm text-green-800 rounded-lg bg-green-50 dark:bg-gray-800 dark:text-green-400"
+    role="alert"
+  >
+    <svg
+      aria-hidden="true"
+      class="flex-shrink-0 inline w-5 h-5 mr-3"
+      fill="currentColor"
+      viewBox="0 0 20 20"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        fill-rule="evenodd"
+        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
+        clip-rule="evenodd"
+      ></path>
+    </svg>
+    <span class="sr-only">Info</span>
+    <div>
+      <span class="font-medium">Reset mật khẩu thành công!</span>
+    </div>
+  </div>
+</section>
 <section class="w-full">
   <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
     <div class="flex items-center justify-between pb-4">
@@ -184,69 +246,45 @@
         <tr>
           <th scope="col" class="px-6 py-3">STT</th>
           <th scope="col" class="px-6 py-3">Email</th>
-          <th scope="col" class="px-6 py-3">Avatar</th>
           <th scope="col" class="px-6 py-3">Địa chỉ</th>
-          <th scope="col" class="px-6 py-3">Danh sách đơn hàng</th>
+          <th scope="col" class="px-6 py-3">SĐT</th>
+          <th scope="col" class="px-6 py-3">Tình trạng</th>
           <th scope="col" class="px-6 py-3">Action</th>
         </tr>
       </thead>
       <tbody>
         <tr
           class="bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-600"
+          *ngFor="let item of users; let i = index"
         >
-          <td class="w-4 p-4 text-center font-semibold">1</td>
+          <td class="w-4 p-4 text-center font-semibold">{{ i + 1 }}</td>
           <th
             scope="row"
             class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white overflow-hidden max-w-[150px]"
           >
-            thaivhph28695@gmail.com
+            {{ item.email }}
           </th>
+          <td class="px-6 py-4">{{ item.address }}</td>
+          <td class="px-6 py-4">{{ item.tel }}</td>
           <td class="px-6 py-4">
-            <img
-              src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcQQMJk4DAlP-OFJ6Bi9pYMuGUvUx6xCdtWpTOtA3n0oiXCUdYZ6I-QvPrZosSzvFoGgedllptAMWs2ukCqbKQXVsdVSWn1hH9XeJyO2mOW7&usqp=CAE"
-              alt=""
-              class="w-14 h-14 object-cover"
-            />
+            <span *ngIf="item.role == 'admin'">Quản trị viên</span>
+            <span *ngIf="item.role == 'member'">Thành viên</span>
+            <span *ngIf="item.role == 'disabled'">Vô hiệu</span>
           </td>
-          <td class="px-6 py-4">Linh Đàm</td>
-          <td class="px-6 py-4">
-            <button class="bg-black text-white px-3 py-2">Xem</button>
-          </td>
-          <td class="px-6 py-4">
-            <a
-              routerLink="#"
+
+          <td class="px-6 py-4" *ngIf="isDisabled">
+            <button
+              (click)="deactive(item._id)"
               class="font-medium px-2 py-1 bg-red-600 text-red-100 dark:text-blue-500 hover:underline ml-3"
-              >Vô hiệu tài khoản</a
             >
-          </td>
-        </tr>
-        <tr
-          class="bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-600"
-        >
-          <td class="w-4 p-4 text-center font-semibold">1</td>
-          <th
-            scope="row"
-            class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white overflow-hidden max-w-[150px]"
-          >
-            thaivhph28695@gmail.com
-          </th>
-          <td class="px-6 py-4">
-            <img
-              src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcQQMJk4DAlP-OFJ6Bi9pYMuGUvUx6xCdtWpTOtA3n0oiXCUdYZ6I-QvPrZosSzvFoGgedllptAMWs2ukCqbKQXVsdVSWn1hH9XeJyO2mOW7&usqp=CAE"
-              alt=""
-              class="w-14 h-14 object-cover"
-            />
-          </td>
-          <td class="px-6 py-4">Linh Đàm</td>
-          <td class="px-6 py-4">
-            <button class="bg-black text-white px-3 py-2">Xem</button>
-          </td>
-          <td class="px-6 py-4">
-            <a
-              routerLink="#"
+              Vô hiệu tài khoản
+            </button>
+            <button
+              (click)="resetPassword(item._id)"
               class="font-medium px-2 py-1 bg-red-600 text-red-100 dark:text-blue-500 hover:underline ml-3"
-              >Vô hiệu tài khoản</a
             >
+              Reset mật khẩu
+            </button>
           </td>
         </tr>
       </tbody>
