--- a/src/app/pages/client/product/list-product/list-product.component.html
+++ b/src/app/pages/client/product/list-product/list-product.component.html
@@ -2,23 +2,21 @@
   <div class="grid lg:grid-cols-4 grid-cols-1 lg:gap-8 gap-0">
     <div class="">
       <h3 class="font-bold lg:mt-8 mt-4">Tìm kiếm sản phẩm</h3>
+      <div class="flex items-center">
+        <input
+          [(ngModel)]="searchText"
+          class="border py-2 pl-2 my-3 focus:outline-none mr-2 lg-[240px]"
+          type="text"
+          placeholder="Nhập tên"
+        />
 
-      <!-- <input
-        class="border py-2 pl-2 my-3 focus:outline-none mr-2"
-        type="text"
-        placeholder="Nhập tên"
-        [(ngModel)]="enteredSearchValue"
-        (input)="onSearchTextChanged()"
-      /> -->
-      <div class="flex justify-between">
-        <app-search-product
-          (searchTextChanged)="onSearchTextEntered($event)"
-        ></app-search-product>
-        <!-- <button
-          class="bg-black text-white py-2 px-4 hover:bg-white hover:text-black hover:border font-medium"
+        <button
+          class="bg-black text-white py-2 px-3 font-medium"
+          (click)="search()"
+          [disabled]="!searchText"
         >
           Tìm kiếm
-        </button> -->
+        </button>
       </div>
 
       <br />
@@ -70,19 +68,116 @@
       </div>
 
       <!-- <app-card></app-card> -->
-      <div class="grid lg:grid-cols-3 grid-cols-1 gap-8">
+      <div class="grid lg:grid-cols-3 grid-cols-1 gap-8" *ngIf="noSearch">
         <div
           *ngFor="let item of products"
           class="relative bg-white dark:bg-gray-800 dark:border-gray-700 m-auto addtocart-hover"
         >
-          <div
-            *ngIf="
-              searchText === '' || item.name.toLowerCase().includes(searchText)
-            "
-          >
+          <div>
+            <a class="w-full">
+              <img
+                *ngIf="item.image?.length > 1"
+                class=""
+                src="{{ item.image[0] }}"
+                alt="product image"
+              />
+              <img
+                *ngIf="item.image?.length == 1"
+                class=""
+                src="{{ item.image }}"
+                alt="product image"
+              />
+            </a>
+            <div class="pb-5 my-2">
+              <a routerLink="/product/{{ item._id }}">
+                <h5
+                  class="tracking-tight dark:text-white line-clamp-1 hover:text-[#618C2F] uppercase"
+                >
+                  {{ item.name }}
+                </h5>
+              </a>
+
+              <div class="flex items-center justify-between">
+                <span class="font-light dark:text-white"
+                  >{{ formatMoney(item.price) }}
+                  <span class="underline">đ</span>
+                </span>
+                <div>
+                  <div class="flex items-center mt-2.5 mb-5">
+                    <svg
+                      aria-hidden="true"
+                      class="w-5 h-5 text-yellow-300"
+                      fill="currentColor"
+                      viewBox="0 0 20 20"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <title>First star</title>
+                      <path
+                        d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
+                      ></path>
+                    </svg>
+                    <svg
+                      aria-hidden="true"
+                      class="w-5 h-5 text-yellow-300"
+                      fill="currentColor"
+                      viewBox="0 0 20 20"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <title>Second star</title>
+                      <path
+                        d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
+                      ></path>
+                    </svg>
+                    <svg
+                      aria-hidden="true"
+                      class="w-5 h-5 text-yellow-300"
+                      fill="currentColor"
+                      viewBox="0 0 20 20"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <title>Third star</title>
+                      <path
+                        d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
+                      ></path>
+                    </svg>
+                    <svg
+                      aria-hidden="true"
+                      class="w-5 h-5 text-yellow-300"
+                      fill="currentColor"
+                      viewBox="0 0 20 20"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <title>Fourth star</title>
+                      <path
+                        d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
+                      ></path>
+                    </svg>
+                    <svg
+                      aria-hidden="true"
+                      class="w-5 h-5 text-yellow-300"
+                      fill="currentColor"
+                      viewBox="0 0 20 20"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <title>Fifth star</title>
+                      <path
+                        d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
+                      ></path>
+                    </svg>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="grid lg:grid-cols-3 grid-cols-1 gap-8">
+        <div *ngFor="let item of searchResult">
+          <div>
             <!-- <i
               class="addtocart absolute text-3xl top-4 right-4 fa-solid fa-cart-plus cursor-pointer text-black"
-            ></i> -->
+            ></i>
+            -->
             <a class="w-full">
               <img
                 *ngIf="item.image?.length > 1"
@@ -179,6 +274,9 @@
           </div>
         </div>
       </div>
+      <!-- <div class="grid grid-cols-3 gap-8">
+        <p>Không tìm thấy sản phẩm nào phù hợp!!!</p>
+      </div> -->
       <div>
         <div class="text-center w-full" aria-label="Page navigation example">
           <ul class="inline-flex items-center -space-x-px">
@@ -263,9 +361,6 @@
           </ul>
         </div>
       </div>
-      <!-- <div class="grid grid-cols-3 gap-8">
-        <p>Không tìm thấy sản phẩm nào phù hợp!!!</p>
-      </div> -->
     </div>
   </div>
 </section>
