--- a/src/app/pages/admin/checkout-admin/checkout-admin.component.html
+++ b/src/app/pages/admin/checkout-admin/checkout-admin.component.html
@@ -108,18 +108,22 @@
             <td class="w-4 p-4 font-semibold text-center">{{ i + 1 }}</td>
             <td
               scope="row"
-              class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white overflow-hidden"
+              class="px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white overflow-hidden"
             >
               {{ item._id }}
             </td>
-            <td class="px-6 py-4">{{ item.name }}</td>
-            <td class="px-6 py-4">{{ item.tel }}</td>
-            <td class="px-6 py-4 overflow-hidden">{{ item.email }}</td>
-            <td class="px-6 py-4">{{ formatDate(item.createdAt) }}</td>
-            <td class="px-6 py-4 text-red-500 font-semibold text-center">
+            <td
+              class="px-6 font-medium whitespace-nowrap dark:text-white overflow-hidden"
+            >
+              {{ item.name }}
+            </td>
+            <td class="px-6">{{ item.tel }}</td>
+            <td class="px-6 overflow-hidden">{{ item.email }}</td>
+            <td class="px-6">{{ formatDate(item.createdAt) }}</td>
+            <td class="px-6 text-red-500 font-semibold text-center">
               {{ formatMoney(item.price) }}
             </td>
-            <td class="px-6 py-4 text-black">
+            <td class="px-6 text-black">
               <select
                 class="border border-black py-2 px-2"
                 (change)="onHandleStatus($event, item._id)"
@@ -165,9 +169,11 @@
                 </option>
               </select>
             </td>
-            <td class="px-6 py-4 line-clamp-4">{{ item.note }}</td>
+            <td class="px-6 line-clamp-3 overflow-scroll overflow-x-hidden">
+              {{ item.note }}
+            </td>
 
-            <td class="px-6 py-4">
+            <td class="px-6">
               <a routerLink="/admin/checkouts/details/{{ item._id }}"
                 ><button class="bg-black text-white px-4 py-2">
                   Xem chi tiết
@@ -181,35 +187,21 @@
       <div class="pt-3">
         <div class="text-center w-full" aria-label="Page navigation example">
           <ul class="inline-flex items-center -space-x-px">
-            <li>
-              <a
-                href="#"
-                class="block px-3 py-2 ml-0 leading-tight text-gray-500 bg-white border border-gray-300 rounded-l-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
-              >
-                <span class="sr-only">Previous</span>
-                <svg
-                  aria-hidden="true"
-                  class="w-5 h-5"
-                  fill="currentColor"
-                  viewBox="0 0 20 20"
-                  xmlns="http://www.w3.org/2000/svg"
+            <ng-container *ngIf="totalPage.length > 0">
+              <li *ngFor="let item of totalPage; let i = index">
+                <button
+                  (click)="onHandlePage(item)"
+                  [ngClass]="
+                    activeButtonPage == item
+                      ? 'px-4 py-2 leading-tight text-gray-500 bg-black border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white'
+                      : 'px-4 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white'
+                  "
                 >
-                  <path
-                    fill-rule="evenodd"
-                    d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
-                    clip-rule="evenodd"
-                  ></path>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a
-                href="#"
-                class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
-                >1</a
-              >
-            </li>
-            <li>
+                  {{ i + 1 }}
+                </button>
+              </li>
+            </ng-container>
+            <!-- <li>
               <a
                 href="#"
                 class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
@@ -237,28 +229,7 @@
                 class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
                 >5</a
               >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="block px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 rounded-r-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
-              >
-                <span class="sr-only">Next</span>
-                <svg
-                  aria-hidden="true"
-                  class="w-5 h-5"
-                  fill="currentColor"
-                  viewBox="0 0 20 20"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-                    clip-rule="evenodd"
-                  ></path>
-                </svg>
-              </a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
