--- a/src/app/pages/client/product/list-product/list-product.component.html
+++ b/src/app/pages/client/product/list-product/list-product.component.html
@@ -70,7 +70,10 @@
       <!-- <app-card></app-card> -->
       <div class="grid lg:grid-cols-3 grid-cols-1 gap-8" *ngIf="noSearch">
         <div
-          *ngFor="let item of products"
+          *ngFor="
+            let item of products
+              | paginate : { itemsPerPage: itemsPerPage, currentPage: p }
+          "
           class="relative bg-white dark:bg-gray-800 dark:border-gray-700 m-auto addtocart-hover"
         >
           <div>
@@ -100,7 +103,6 @@
               <div class="flex items-center justify-between">
                 <span class="font-light dark:text-white"
                   >{{ formatMoney(item.price) }}
-                  <span class="underline">đ</span>
                 </span>
                 <div>
                   <div class="flex items-center mt-2.5 mb-5">
@@ -170,6 +172,12 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="w-full">
+        <pagination-controls
+          class="text-center"
+          (pageChange)="p = $event"
+        ></pagination-controls>
       </div>
       <div class="grid lg:grid-cols-3 grid-cols-1 gap-8">
         <div *ngFor="let item of searchResult">
@@ -277,90 +285,6 @@
       <!-- <div class="grid grid-cols-3 gap-8">
         <p>Không tìm thấy sản phẩm nào phù hợp!!!</p>
       </div> -->
-      <div>
-        <div class="text-center w-full" aria-label="Page navigation example">
-          <ul class="inline-flex items-center -space-x-px">
-            <li>
-              <a
-                href="#"
-                class="block px-3 py-2 ml-0 leading-tight text-gray-500 bg-white border border-gray-300 rounded-l-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
-              >
-                <span class="sr-only">Previous</span>
-                <svg
-                  aria-hidden="true"
-                  class="w-5 h-5"
-                  fill="currentColor"
-                  viewBox="0 0 20 20"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
-                    clip-rule="evenodd"
-                  ></path>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a
-                href="#"
-                class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
-                >1</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
-                >2</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                aria-current="page"
-                class="z-10 px-3 py-2 leading-tight text-white border bg-black dark:border-gray-700 dark:bg-gray-700 dark:text-white"
-                >3</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
-                >4</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
-                >5</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="block px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 rounded-r-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
-              >
-                <span class="sr-only">Next</span>
-                <svg
-                  aria-hidden="true"
-                  class="w-5 h-5"
-                  fill="currentColor"
-                  viewBox="0 0 20 20"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-                    clip-rule="evenodd"
-                  ></path>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
     </div>
   </div>
 </section>
