--- a/src/app/components/admin/nav-admin/nav-admin.component.html
+++ b/src/app/components/admin/nav-admin/nav-admin.component.html
@@ -71,7 +71,7 @@
           <i class="fa-solid fa-users w-6"></i>Quản lý tài khoản
         </div>
       </a>
-      <a (click)="navigate('/admin/banners')" class="cursor-pointer">
+      <!-- <a (click)="navigate('/admin/banners')" class="cursor-pointer">
         <div
           *ngIf="this.currentUrl == '/admin/banners'"
           class="bg-[#3964AE] rounded-xl px-4 py-2.5 line-clamp-1"
@@ -85,7 +85,7 @@
         >
           <i class="fa-solid fa-images w-6"></i>Quản lý banners
         </div>
-      </a>
+      </a> -->
     </div>
     <hr class="my-5 mx-4 bg-gray-600" />
     <div>
