--- a/src/app/pages/client/product/list-product/list-product.component.html
+++ b/src/app/pages/client/product/list-product/list-product.component.html
@@ -70,7 +70,10 @@
       <!-- <app-card></app-card> -->
       <div class="grid lg:grid-cols-3 grid-cols-1 gap-8" *ngIf="noSearch">
         <div
-          *ngFor="let item of products"
+          *ngFor="
+            let item of products
+              | paginate : { itemsPerPage: itemsPerPage, currentPage: p }
+          "
           class="relative bg-white dark:bg-gray-800 dark:border-gray-700 m-auto addtocart-hover"
         >
           <div>
@@ -169,6 +172,14 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="min-w-full flex justify-center items-center py-4">
+        <div>
+          <pagination-controls
+            class="text-center"
+            (pageChange)="p = $event"
+          ></pagination-controls>
         </div>
       </div>
       <div class="grid lg:grid-cols-3 grid-cols-1 gap-8">
@@ -277,7 +288,7 @@
       <!-- <div class="grid grid-cols-3 gap-8">
         <p>Không tìm thấy sản phẩm nào phù hợp!!!</p>
       </div> -->
-      <div>
+      <!-- <div>
         <div class="text-center w-full" aria-label="Page navigation example">
           <ul class="inline-flex items-center -space-x-px">
             <li>
@@ -360,7 +371,7 @@
             </li>
           </ul>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
