--- a/src/app/components/admin/nav-admin/nav-admin.component.html
+++ b/src/app/components/admin/nav-admin/nav-admin.component.html
@@ -126,7 +126,7 @@
           <i class="fa-solid fa-gear w-6"></i>Cài đặt
         </div>
       </a>
-      <a (click)="navigate('/')" class="cursor-pointer">
+      <a routerLink="/" target="_blank" class="cursor-pointer">
         <div
           class="rounded-xl px-4 py-2.5 line-clamp-1 hover:bg-[#3964AE]"
           style="transition: all 0.4s"
