--- a/src/app/components/client/header/header.component.html
+++ b/src/app/components/client/header/header.component.html
@@ -61,7 +61,7 @@
           >Trang chủ</a
         >
         <a
-          routerLink="/product"
+          routerLink="/products"
           class="text-gray-500 hover:text-gray-600 font-medium px-3 py-2"
           >Sản phẩm</a
         >
